apps/minecraft-resource-pack/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-resource-pack
  namespace: minecraft-resource-pack
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft-resource-pack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft-resource-pack
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /Matcha_Flavoured_1_12.zip
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /Matcha_Flavoured_1_12.zip
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: resource-pack
              mountPath: /usr/share/nginx/html
      volumes:
        - name: resource-pack
          emptyDir: {}
