apps/minecraft-resource-pack/ingress.yaml
---
# Public via the Cloudflare Tunnel.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-resource-pack
  namespace: minecraft-resource-pack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
    - host: packs.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-resource-pack
                port:
                  name: http
  tls:
    - hosts:
        - packs.jensvanzutphen.com
      secretName: minecraft-resource-pack-tls
